src/test/ui/specialization/deafult-generic-associated-type-bound.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/deafult-generic-associated-type-bound.rs:4:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0277]: can't compare `T` with `T`
  --> $DIR/deafult-generic-associated-type-bound.rs:18:5
   |
LL |     type U<'a>: PartialEq<&'a Self>;
   |     -------------------------------- required by `X::U`
...
LL |     default type U<'a> = &'a T;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `T == T`
   |
   = help: the trait `std::cmp::PartialEq` is not implemented for `T`
   = note: required because of the requirements on the impl of `std::cmp::PartialEq` for `&'a T`
help: consider further restricting this bound
   |
LL | impl<T: 'static + std::cmp::PartialEq> X for T {
   |                 ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
